# QuickBite

./: .gitignore  Dockerfile  README.md  requirements.txt  vercel.json
.run/: FastAPI Backend.run.xml  Flask Backend.run.xml
admin/: package-lock.json  package.json  tailwind.config.js
admin/src/: App.jsx  Dashboard.jsx  index.css  setup.js
backend/: .dockerignore  .gcloudignore  Dockerfile  RestAPI.md  alt_main.py  app.yaml  database.py  main.py  pyproject.toml  requirement.txt  requirements.txt
backend/controller/: alt_otp.py  otp.py  staff_otp.py  token.py
backend/data/: Student List 2024.xls
backend/database/: database.db  database.sqlite
backend/logs/: logger.py
backend/models/: Cart.py  Inventory.py  MenuCard.py  Orders.py  Staff.py  Users.py
backend/requests/: Staff Auth.http
backend/routes/admin/: auth.py
backend/routes/kitchen/: menu_card.py  orders.py
backend/routes/staff/: auth.py
backend/routes/user/: api.py  auth.py
backend/templates/: checkout.html
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: index.css  index.js  setup.js
gui/: __init__.py  main.py
gui/assets/: app_icons.py  icon_resource.qrc
gui/controller/: database_controller.py  main_controller.py
gui/stylesheets/: temp.qss
gui/ui/: add_dialog.ui  main_window.ui  main_window_ui.py  temp_window.ui
gui/views/: add_dialog.py  admin_app.py  main.py  main_window.py  temp.py  temp_window.py
src/: .gcloudignore  app.yaml  requirements.txt  rxconfig.py
src/assets/: Auth.css  (+1 more)
(+109 files in other folders)
