[tool.poetry]
name = "quikbite-backend"
version = "0.1.0"
description = "Backend for QuikBite CMS"
authors = ["Kevin Nadar <kevinxaviernadar@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.0"
fastapi-mail = "^1.4.1"
uvicorn = "^0.26.0"
SQLAlchemy = "^2.0.25"
python-jose = "^3.3.0"
psycopg2-binary = "^2.9.9"
bcrypt = "^4.1.2"
pyotp = "^2.9.0"
pandas = "^2.1.4"
xlrd = "^2.0.1"
razorpay = "^1.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
